<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_person"
            android:title="@string/person" />
    </group>

    <item android:title="@string/Account">
        <menu>
            <item
                android:id="@+id/signIn"
                android:title="@string/signIn" />
            <item
                android:id="@+id/signOut"
                android:title="@string/signOut" />
        </menu>
    </item>

</menu>
