<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".RegisterAndLogin.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_register" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#2B2B2B"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#CACACA" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="2dp"
                            android:textColorHint="#000">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/TX_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_email"
                                android:inputType="text"
                                android:paddingLeft="8dp"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="2dp"
                            android:textColorHint="#000">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/TX_nik"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_name"
                                android:inputType="text"
                                android:paddingLeft="8dp"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="2dp"
                            android:textColorHint="#000">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/TX_mail_internal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_numberPhone"
                                android:inputType="textEmailAddress"
                                android:paddingLeft="8dp"
                                android:textSize="15sp" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:textColorHint="#000">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/TX_mail_eksternal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:inputType="textEmailAddress"
                                android:paddingLeft="8dp"
                                android:textSize="15sp" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textInputLayout5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:textColorHint="#000">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/TX_divisi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_passwordRepeat"
                                android:inputType="text"
                                android:paddingLeft="8dp"
                                android:textSize="15dp" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/BTN_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/button_color"
                        android:text="@string/btn_register"
                        android:textColor="#fff" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/messageInRegister" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TXT_BTN_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/backLogin"
                            android:textColor="#5C6BC0"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>


